bindata/assets/lws-controller-generated/apps_v1_deployment_lws-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: lws
    app.kubernetes.io/instance: lws
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: lws
    app.kubernetes.io/part-of: lws
    control-plane: controller-manager
  name: lws-controller-manager
  namespace: openshift-lws-operator
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: lws
      app.kubernetes.io/name: lws
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/instance: lws
        app.kubernetes.io/name: lws
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --config=/controller_manager_config.yaml
        - --zap-log-level=2
        command:
        - /manager
        image: ${CONTROLLER_IMAGE}:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 8443
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 1
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /controller_manager_config.yaml
          name: manager-config
          subPath: controller_manager_config.yaml
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        - mountPath: /tmp/k8s-metrics-server/serving-certs
          name: metrics-cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: lws-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          name: lws-manager-config
        name: manager-config
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      - name: metrics-cert
        secret:
          items:
          - key: ca.crt
            path: ca.crt
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          optional: false
          secretName: metrics-server-cert
