bindata/assets/lws-controller-generated/v1_service_lws-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: lws
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: lws
    control-plane: controller-manager
  name: lws-controller-manager-metrics-service
  namespace: openshift-lws-operator
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/instance: lws
    app.kubernetes.io/name: lws
    control-plane: controller-manager
