bindata/assets/lws-controller-generated/v1_service_lws-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: lws
    app.kubernetes.io/instance: lws
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: lws
    app.kubernetes.io/part-of: lws
  name: lws-webhook-service
  namespace: openshift-lws-operator
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/instance: lws
    app.kubernetes.io/name: lws
    control-plane: controller-manager
