bindata/assets/lws-controller-generated/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_lws-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: CERTIFICATE_NAMESPACE/CERTIFICATE_NAME
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: lws
    app.kubernetes.io/instance: lws
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: lws
    app.kubernetes.io/part-of: lws
  name: lws-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: lws-webhook-service
      namespace: openshift-lws-operator
      path: /mutate-leaderworkerset-x-k8s-io-v1-leaderworkerset
  failurePolicy: Fail
  name: mleaderworkerset.kb.io
  rules:
  - apiGroups:
    - leaderworkerset.x-k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - leaderworkersets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: lws-webhook-service
      namespace: openshift-lws-operator
      path: /mutate--v1-pod
  failurePolicy: Fail
  name: mpod.kb.io
  objectSelector:
    matchExpressions:
    - key: leaderworkerset.sigs.k8s.io/name
      operator: Exists
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
