bindata/assets/lws-controller-generated/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_lws-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: CERTIFICATE_NAMESPACE/CERTIFICATE_NAME
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: lws
    app.kubernetes.io/instance: lws
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: lws
    app.kubernetes.io/part-of: lws
  name: lws-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: lws-webhook-service
      namespace: openshift-lws-operator
      path: /validate-disaggregatedset-x-k8s-io-v1-disaggregatedset
  failurePolicy: Ignore
  name: vdisaggregatedset.kb.io
  rules:
  - apiGroups:
    - disaggregatedset.x-k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - disaggregatedsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: lws-webhook-service
      namespace: openshift-lws-operator
      path: /validate-leaderworkerset-x-k8s-io-v1-leaderworkerset
  failurePolicy: Fail
  name: vleaderworkerset.kb.io
  rules:
  - apiGroups:
    - leaderworkerset.x-k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - leaderworkersets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: lws-webhook-service
      namespace: openshift-lws-operator
      path: /validate--v1-pod
  failurePolicy: Fail
  name: vpod.kb.io
  objectSelector:
    matchExpressions:
    - key: leaderworkerset.sigs.k8s.io/name
      operator: Exists
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: None
